--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -4,8 +4,8 @@ title: "Hugo Profile"
 theme: hugo-profile
 
 Paginate: 3
-disqusShortname: gurusabarish
-googleAnalytics: G-DWJJVE27WD
+# disqusShortname:
+# googleAnalytics:
 
 markup:
   goldmark:
@@ -109,7 +109,7 @@ params:
 
   # About
   about:
-    enable: true
+    enable: false
     title: "About Me"
     image: '/images/me.png'
     content: |-
@@ -129,7 +129,7 @@ params:
 
   # Experience
   experience:
-    enable: true
+    enable: false
     items:
       - job: "Senior Software Developer"
         company: "Facebook"
@@ -193,7 +193,7 @@ params:
   
   # Education
   education:
-    enable: true
+    enable: false
     # index: true
     items:
       - title: "Master of Business Administration"
@@ -235,7 +235,7 @@ params:
       
   # Achievements
   achievements:
-    enable: true
+    enable: false
     items:  
       - title: Google kickstart runner
         content: I solved all problems with optimal solution.
